# edgemorph

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: edm-python-styles.yml
devscripts/: codeblocks.py
docs/v1/rust/: rust_api.html  v0_1_0.html  v0_1_0.md
edgemorph/: Cargo.toml  Cargo.toml.bak  README.md  cargolock.bak
edgemorph/edgemorph/: __init__.py  adapter.py
edgemorph/src/: datastructures.rs  datastructures.rs.bak  lib.rs
edgemorph/src/api/: mod.rs
edgemorph/src/compiler/: compiler.rs  datastructures-rewrite.rs  ir.rs
edgemorph/src/magic/: edgemorph_core.edgeql
edgemorph_derive/: Cargo.toml
edgemorph_derive/src/: lib.rs  utils.rs
edm/: Cargo.toml  README.md  build-linux.sh  build-wheels.sh  convergent_compilation_procedure.xml  dev-requirements.txt  edm  edm.dot  make_install_graph.xml  pyproject.toml  setup.cfg  setup.py
edm/edm/: __init__.py  __main__.py  source.py
edm/src/: lib.rs  main.rs
edm/src/add/: mod.rs
edm/src/common/: common.rs  deserialize.rs  deserialize_ast.pest  mod.rs
edm/src/compile/: mod.rs
edm/src/init/: mod.rs
edm/src/install/: mod.rs
edm/src/make/: mod.rs
edm/src/test/: mod.rs
edm/src/tests/: base.rs
edm/src/tests/scripts/: pyenv_installer.sh  rpcconnect.py  rpcserver.py
edm/src/tests/serialized/: empty_module.esdl  empty_module.txt
edm/src/tests/v1.0.6a/: 01-ast-deserialize.rs  helper.rs
edm/test/test_ast_min/: 02-api-astmin.astm
edm/test/test_sdl_input/: 01-inductive-test.esdl
edm/test_ast_output/: 02-api.astm
edm/test_sdl_input/: 02-api.esdl
