[package]
name = "edgemorph"
version = "0.1.0"
authors = ["David Golembiowski <david@dgolembiowski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
derive_builder = "0.9.0"
edgeql-parser = { git = "https://github.com/edgedb/edgedb", version = "0.1.0" }
edgedb-protocol = { git = "https://github.com/edgedb/edgedb-rust", version = "0.1.0" }
edgemorph = { path = "../edgemorph" }