[package]
name = "edm"
version = "0.1.0"
authors = ["David Golembiowski <david@dgolembiowski.com>"]
edition = "2018"
crate-type = ["cdylib"]

[dependencies]
clap = "2.33.3"
pest = "2.1.3"

[dependencies.cpython]
name = "cpython"
version = "0.5.1"
features = ["extension-module"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[dev-dependencies]
edgemorph = { path = "../edgemorph" }

