[package]
name = "edm"
version = "0.1.0"
authors = ["David Golembiowski <david@dgolembiowski.com>"]
edition = "2018"
autotests = false
crate-type = ["cdylib"]

[dependencies]
clap = "2.33.3"
pest = "2.1.3"
pest_derive = "2.1.0"
proc-macro2 = "1.0.24"
quote = "1.0.7"
serde = { version = "1.0", features = ["derive"] }
edgeql-parser = { git = "https://github.com/edgedb/edgedb", version = "0.1.0" }
edgedb-protocol = { git = "https://github.com/edgedb/edgedb-rust", version = "0.1.0" }
derive_builder = "0.9.0"
double-checked-cell-async = "2.0.2"
pretty_assertions = "0.6.1"
rexpect = "0.4.0"
assert_cmd = "1.0.1"
pin-utils = "0.1.0-alpha.4"
async-traits = "0.0.0"

[dependencies.edgedb-cli]
name = "edgedb-cli"
git  = "https://github.com/edgedb/edgedb-cli.git"
version = "1.0.0-alpha.6"
 
[dependencies.paste]
name = "paste" # version = "1.0.2"
git = "https://github.com/scalexm/paste.git"
branch = "attr"

[dependencies.cpython]
name = "cpython"
version = "0.5.1"
features = ["extension-module"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[build]
rustflags=["dead code"]

[[test]]
name = "tests"
path = "src/tests/base.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
test-case = { version = "1.0.0" }

