[tool.poetry]
name = "edm"
version = "0.0.0"
description = "Python prototype of EDM compiler"
authors = []
packages = [
    { include = "edm" },
    { include = "edb", from = "./bootstrap/edgedb" },
]

[tool.poetry.scripts]
edm = 'edm.__main__:cli_main'

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
autoflake = "^1.4"
flake8 = "^3.8.4"
mypy = "^0.790"

[tool.isort]
profile = "black"
src_paths = ["edm"]
skip = ["bootstrap"]
combine_as_imports = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | bootstrap
  )/
)
'''

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
