[tool.poetry]
name = "edm"
version = "0.0.0"
description = "Python prototype of EDM compiler"
authors = []
packages = [
    { include = "edm" },
    { include = "edb", from = "./bootstrap/edgedb" }
]

[tool.poetry.scripts]
edm = 'edm.__main__:cli_main'

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.1"
asyncpg = "^0.20.0"
click = "^7.1"
httptools = "^0.0.13"
immutables = "^0.13"
parsing = "^1.6.1"
prompt_toolkit = "3.0.3"
psutil = "~=5.6.1"
Pygments = "~=2.3.0"
setproctitle = "^1.1.10"
setuptools-rust = "0.10.3"
setuptools_scm = {git="git@github.com:pypa/setuptools_scm.git", tag = "v3.2.0" }
typing_inspect = { git = "https://github.com/ilevkivskyi/typing_inspect.git", tag = "0.5.0"}
wcwidth = { git = "https://github.com/jquast/wcwidth.git", tag = "0.2.5" }
graphql-core = { git = "https://github.com/graphql-python/graphql-core.git", tag = "v3.0.3" }
promise = { git = "https://github.com/syrusakbary/promise.git", tag = "v2.2.0" }
Cython = "^0.29.21"
uvloop = "^0.14.0"
yaspin = "^1.2.0"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
autoflake = "^1.4"
flake8 = "^3.8.4"
mypy = "^0.790"

[tool.isort]
profile = "black"
src_paths = ["edm"]
skip = ["bootstrap"]
combine_as_imports = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | bootstrap
  )/
)
'''

[build-system]
requires = ["poetry>=1.1", "setuptools", "wheel", "setuptools-rust"]
build-backend = "poetry.masonry.api"
